--- a/Assignment 1/HA-1. Word Embeddings.ipynb
+++ b/Assignment 1/HA-1. Word Embeddings.ipynb
@@ -90,13 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Python libraries and helper functions (in utils2) \n",
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
+    "from enum import Enum, unique\n",
     "import numpy as np\n",
     "from collections import Counter\n",
     "from utils2 import sigmoid, get_batches, compute_pca, get_dict"
@@ -114,8 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,13 +254,13 @@
     "    \n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    # W1 has shape (N,V)\n",
-    "    W1 = None\n",
+    "    W1 = np.random.random((N, V))\n",
     "    # W2 has shape (V,N)\n",
-    "    W2 = None\n",
+    "    W2 = np.random.random((V, N))\n",
     "    # b1 has shape (N,1)\n",
-    "    b1 = None\n",
+    "    b1 = np.random.random((N, 1))\n",
     "    # b2 has shape (V,1)\n",
-    "    b2 = None\n",
+    "    b2 = np.random.random((V, 1))\n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    return W1, W2, b1, b2"
@@ -265,9 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp_W1.shape: (4, 10)\n",
+      "tmp_W2.shape: (10, 4)\n",
+      "tmp_b1.shape: (4, 1)\n",
+      "tmp_b2.shape: (10, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function example.\n",
     "tmp_N = 4\n",
@@ -327,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,10 +354,12 @@
     "    '''\n",
     "    \n",
     "    ### START CODE HERE (Replace instances of 'None' with your own code) ###\n",
-    "    \n",
+    "    class Axis(Enum):\n",
+    "        ROWS = 0\n",
+    "        COLUMNS = 1\n",
     "    # Calculate yhat (softmax)\n",
-    "    e_z = None\n",
-    "    yhat = None\n",
+    "    yhat = np.exp(z)/np.sum(np.exp(z), \n",
+    "        axis=Axis.ROWS.value)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return yhat"
@@ -351,9 +367,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5       , 0.73105858, 0.88079708],\n",
+       "       [0.5       , 0.26894142, 0.11920292]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Test the function\n",
     "tmp = np.array([[1,2,3],\n",
@@ -415,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,13 +458,13 @@
     "    ### START CODE HERE (Replace instances of 'None' with your own code) ###\n",
     "    \n",
     "    # Calculate h\n",
-    "    h = None\n",
-    "    \n",
+    "    h = np.dot(W1, x) + b1\n",
+    "\n",
     "    # Apply the relu on h (store result in h)\n",
-    "    h = None\n",
-    "    \n",
+    "    h = np.maximum(h, 0)\n",
+    "\n",
     "    # Calculate z\n",
-    "    z = None\n",
+    "    z = np.dot(W2, h) + b2\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -446,9 +473,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x has shape (3, 1)\n",
+      "N is 2 and vocabulary size V is 3\n",
+      "call forward_prop\n",
+      "\n",
+      "z has shape (3, 1)\n",
+      "z has values:\n",
+      "[[0.55379268]\n",
+      " [1.58960774]\n",
+      " [1.50722933]]\n",
+      "\n",
+      "h has shape (2, 1)\n",
+      "h has values:\n",
+      "[[0.92477674]\n",
+      " [1.02487333]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the function\n",
     "\n",
@@ -512,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,9 +575,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp_x.shape (5775, 4)\n",
+      "tmp_y.shape (5775, 4)\n",
+      "tmp_W1.shape (50, 5775)\n",
+      "tmp_W2.shape (5775, 50)\n",
+      "tmp_b1.shape (50, 1)\n",
+      "tmp_b2.shape (5775, 1)\n",
+      "tmp_z.shape: (5775, 4)\n",
+      "tmp_h.shape: (50, 4)\n",
+      "tmp_yhat.shape: (5775, 4)\n",
+      "call compute_cost\n",
+      "tmp_cost 11.4095\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the function\n",
     "tmp_C = 2\n",
@@ -599,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,20 +682,22 @@
     "        grad_W1, grad_W2, grad_b1, grad_b2:  gradients of matrices and biases   \n",
     "    '''\n",
     "    ### START CODE HERE (Replace instanes of 'None' with your code) ###\n",
-    "    \n",
+    "    class Axis(Enum):\n",
+    "        ROWS = 0\n",
+    "        COLUMNS = 1\n",
     "    # Compute l1 as W2^T (Yhat - Y)\n",
     "    # Re-use it whenever you see W2^T (Yhat - Y) used to compute a gradient\n",
-    "    l1 = None\n",
+    "    l1 = np.dot(W2.T, yhat - y)\n",
     "    # Apply relu to l1\n",
-    "    l1 = None\n",
+    "    l1 = np.maximum(l1, 0)\n",
     "    # Compute the gradient of W1\n",
-    "    grad_W1 = None\n",
+    "    grad_W1 = np.dot(l1, x.T)/batch_size\n",
     "    # Compute the gradient of W2\n",
-    "    grad_W2 = None\n",
+    "    grad_W2 = np.dot(yhat - y, h.T)/batch_size\n",
     "    # Compute the gradient of b1\n",
-    "    grad_b1 = None\n",
+    "    grad_b1 = np.sum(l1, axis=Axis.COLUMNS.value, keepdims=True)/batch_size\n",
     "    # Compute the gradient of b2\n",
-    "    grad_b2 = None\n",
+    "    grad_b2 = np.sum(yhat - y, axis=Axis.COLUMNS.value, keepdims=True)/batch_size\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return grad_W1, grad_W2, grad_b1, grad_b2"
@@ -637,9 +705,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get a batch of data\n",
+      "tmp_x.shape (5775, 4)\n",
+      "tmp_y.shape (5775, 4)\n",
+      "\n",
+      "Initialize weights and biases\n",
+      "tmp_W1.shape (50, 5775)\n",
+      "tmp_W2.shape (5775, 50)\n",
+      "tmp_b1.shape (50, 1)\n",
+      "tmp_b2.shape (5775, 1)\n",
+      "\n",
+      "Forwad prop to get z and h\n",
+      "tmp_z.shape: (5775, 4)\n",
+      "tmp_h.shape: (50, 4)\n",
+      "\n",
+      "Get yhat by calling softmax\n",
+      "tmp_yhat.shape: (5775, 4)\n",
+      "\n",
+      "call back_prop\n",
+      "tmp_grad_W1.shape (50, 5775)\n",
+      "tmp_grad_W2.shape (5775, 50)\n",
+      "tmp_grad_b1.shape (50, 1)\n",
+      "tmp_grad_b2.shape (5775, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the function\n",
     "tmp_C = 2\n",
@@ -740,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,20 +863,29 @@
     "    for x, y in get_batches(data, word2Ind, V, C, batch_size):\n",
     "        ### START CODE HERE (Replace instances of 'None' with your own code) ###\n",
     "        # Get z and h\n",
-    "        z, h = None\n",
+    "        z, h = forward_prop(x, W1, W2, b1, b2)\n",
     "        # Get yhat\n",
-    "        yhat = None\n",
+    "        yhat = softmax(z)\n",
     "        # Get cost\n",
-    "        cost = None\n",
+    "        cost = compute_cost(y, yhat, batch_size)\n",
+    "        if ( (iters+1) % 10 == 0):\n",
+    "            print(f\"iters: {iters + 1} cost: {cost:.6f}\")\n",
     "\n",
     "        # Get gradients\n",
-    "        grad_W1, grad_W2, grad_b1, grad_b2 = None\n",
-    "        \n",
+    "        grad_W1, grad_W2, grad_b1, grad_b2 = back_prop(x,\n",
+    "                                                       yhat,\n",
+    "                                                       y,\n",
+    "                                                       h,\n",
+    "                                                       W1,\n",
+    "                                                       W2,\n",
+    "                                                       b1,\n",
+    "                                                       b2,\n",
+    "                                                       batch_size)\n",
     "        # Update weights and biases\n",
-    "        W1 = ...\n",
-    "        W2 = ...\n",
-    "        b1 = ...\n",
-    "        b2 = ...\n",
+    "        W1 = W1 - alpha * grad_W1\n",
+    "        W2 = W2 - alpha * grad_W2\n",
+    "        b1 = b1 - alpha * grad_b1\n",
+    "        b2 = b2 - alpha * grad_b2\n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "        \n",
@@ -794,9 +900,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Call gradient_descent\n",
+      "iters: 10 cost: 0.569737\n",
+      "iters: 20 cost: 0.106251\n",
+      "iters: 30 cost: 0.058094\n",
+      "iters: 40 cost: 0.039949\n",
+      "iters: 50 cost: 0.030436\n",
+      "iters: 60 cost: 0.024582\n",
+      "iters: 70 cost: 0.020616\n",
+      "iters: 80 cost: 0.017752\n",
+      "iters: 90 cost: 0.015587\n",
+      "iters: 100 cost: 0.013892\n",
+      "iters: 110 cost: 0.012919\n",
+      "iters: 120 cost: 0.012113\n",
+      "iters: 130 cost: 0.011401\n",
+      "iters: 140 cost: 0.010768\n",
+      "iters: 150 cost: 0.010202\n"
+     ]
+    }
+   ],
    "source": [
     "# test your function\n",
     "C = 2\n",
@@ -848,17 +977,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 50) [2745, 3951, 2961, 3023, 5675, 1452, 2472, 4191, 2316, 4278]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# visualizing the word vectors here\n",
     "from matplotlib import pyplot\n",
@@ -929,7 +1050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
