--- a/Assignment 2/HA-2. Character-Level Language Model.ipynb
+++ b/Assignment 2/HA-2. Character-Level Language Model.ipynb
@@ -174,7 +174,8 @@
     "   \n",
     "    ### START CODE HERE ###\n",
     "    # clip to mitigate exploding gradients, loop over [dWax, dWaa, dWya, db, dby]. (≈2 lines)\n",
-    "    \n",
+    "    for gradient in [dWax, dWaa, dWya, db, dby]:\n",
+    "        np.clip(gradient, -maxValue, maxValue, out=gradient)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    gradients = {\"dWaa\": dWaa, \"dWax\": dWax, \"dWya\": dWya, \"db\": db, \"dby\": dby}\n",
@@ -335,15 +336,15 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    # Step 1: Create the one-hot vector x for the first character (initializing the sequence generation). (≈1 line)\n",
-    "    x = None\n",
+    "    x = np.zeros((vocab_size, 1))\n",
     "    # Step 1': Initialize a_prev as zeros (≈1 line)\n",
-    "    a_prev = None\n",
+    "    a_prev = np.zeros((n_a, 1))\n",
     "    \n",
     "    # Create an empty list of indices, this is the list which will contain the list of indices of the characters to generate (≈1 line)\n",
-    "    indices = None\n",
+    "    indices = []\n",
     "    \n",
     "    # Idx is a flag to detect a newline character, we initialize it to -1\n",
-    "    idx = None\n",
+    "    idx = -1 \n",
     "    \n",
     "    # Loop over time-steps t. At each time-step, sample a character from a probability distribution and append \n",
     "    # its index to \"indices\". We'll stop if we reach 50 characters (which should be very unlikely with a well \n",
@@ -354,25 +355,25 @@
     "    while (idx != newline_character and counter != 50):\n",
     "        \n",
     "        # Step 2: Forward propagate x using the equations (1), (2) and (3)\n",
-    "        a = None\n",
-    "        z = None\n",
-    "        y = None\n",
+    "        a = np.tanh(np.dot(Wax, x) + np.dot(Waa, a_prev) + b)\n",
+    "        z = np.dot(Wya, a) + by\n",
+    "        y = softmax(z)\n",
     "        \n",
     "        # for grading purposes\n",
     "        np.random.seed(counter + seed) \n",
     "        \n",
     "        # Step 3: Sample the index of a character within the vocabulary from the probability distribution y\n",
-    "        idx = None\n",
+    "        idx = np.random.choice(list(range(vocab_size)), p=y.ravel())\n",
     "\n",
     "        # Append the index to \"indices\"\n",
-    "        ...\n",
+    "        indices.append(idx)\n",
     "        \n",
     "        # Step 4: Overwrite the input character as the one corresponding to the sampled index.\n",
-    "        x = None\n",
-    "        x[idx] = None\n",
+    "        x = np.zeros((vocab_size, 1))\n",
+    "        x[idx] = 1\n",
     "        \n",
     "        # Update \"a_prev\" to be \"a\"\n",
-    "        ...\n",
+    "        a_prev = a\n",
     "        \n",
     "        # for grading purposes\n",
     "        seed += 1\n",
@@ -396,8 +397,8 @@
      "output_type": "stream",
      "text": [
       "Sampling:\n",
-      "list of sampled indices: [12, 17, 24, 14, 13, 9, 10, 22, 24, 6, 13, 11, 12, 6, 21, 15, 21, 14, 3, 2, 1, 21, 18, 24, 7, 25, 6, 25, 18, 10, 16, 2, 3, 8, 15, 12, 11, 7, 1, 12, 10, 2, 7, 7, 11, 17, 18, 1, 12, 9, 0]\n",
-      "list of sampled characters: ['l', 'q', 'x', 'n', 'm', 'i', 'j', 'v', 'x', 'f', 'm', 'k', 'l', 'f', 'u', 'o', 'u', 'n', 'c', 'b', 'a', 'u', 'r', 'x', 'g', 'y', 'f', 'y', 'r', 'j', 'p', 'b', 'c', 'h', 'o', 'l', 'k', 'g', 'a', 'l', 'j', 'b', 'g', 'g', 'k', 'q', 'r', 'a', 'l', 'i', '\\n']\n"
+      "list of sampled indices: [12, 17, 24, 14, 13, 9, 10, 22, 24, 6, 13, 11, 12, 6, 21, 15, 21, 14, 3, 2, 1, 21, 18, 24, 7, 25, 6, 25, 18, 10, 16, 2, 3, 8, 15, 12, 11, 7, 1, 12, 10, 2, 7, 3, 11, 2, 6, 12, 13, 15, 0]\n",
+      "list of sampled characters: ['l', 'q', 'x', 'n', 'm', 'i', 'j', 'v', 'x', 'f', 'm', 'k', 'l', 'f', 'u', 'o', 'u', 'n', 'c', 'b', 'a', 'u', 'r', 'x', 'g', 'y', 'f', 'y', 'r', 'j', 'p', 'b', 'c', 'h', 'o', 'l', 'k', 'g', 'a', 'l', 'j', 'b', 'g', 'c', 'k', 'b', 'f', 'l', 'm', 'o', '\\n']\n"
      ]
     }
    ],
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,16 +526,16 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Forward propagate through time (≈1 line)\n",
-    "    loss, cache = None\n",
+    "    loss, cache = rnn_forward(X, Y, a_prev, parameters)\n",
     "    \n",
     "    # Backpropagate through time (≈1 line)\n",
-    "    gradients, a = None\n",
+    "    gradients, a = rnn_backward(X, Y, parameters, cache)\n",
     "    \n",
     "    # Clip your gradients between -5 (min) and 5 (max) (≈1 line)\n",
-    "    gradients = None\n",
+    "    gradients = clip(gradients, 5)\n",
     "    \n",
     "    # Update parameters (≈1 line)\n",
-    "    parameters = None\n",
+    "    parameters = update_parameters(parameters, gradients, learning_rate)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -543,17 +544,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss = 126.50397572165382\n",
-      "gradients[\"dWaa\"][1][2] = 0.19470931534716163\n",
+      "Loss = 126.50397572165393\n",
+      "gradients[\"dWaa\"][1][2] = 0.1947093153471468\n",
       "np.argmax(gradients[\"dWax\"]) = 93\n",
-      "gradients[\"dWya\"][1][2] = -0.007773876032002922\n",
+      "gradients[\"dWya\"][1][2] = -0.007773876032002862\n",
       "gradients[\"db\"][4] = [-0.06809825]\n",
       "gradients[\"dby\"][1] = [0.01538192]\n",
       "a_last[4] = [-1.]\n"
@@ -670,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,13 +721,13 @@
     "        ### START CODE HERE ###\n",
     "        \n",
     "        # Use the hint above to define one training example (X,Y) (≈ 2 lines)\n",
-    "        index = None\n",
-    "        X = None\n",
-    "        Y = None\n",
+    "        index = j % len(examples)\n",
+    "        X = [None] + [char_to_ix[ch] for ch in examples[index]] \n",
+    "        Y = X[1:] + [char_to_ix[\"\\n\"]]\n",
     "        \n",
     "        # Perform one optimization step: Forward-prop -> Backward-prop -> Clip -> Update parameters\n",
     "        # Choose a learning rate of 0.01\n",
-    "        curr_loss, gradients, a_prev = None\n",
+    "        curr_loss, gradients, a_prev = optimize(X, Y, a_prev, parameters)\n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "        \n",
@@ -762,11 +763,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 0, Loss: 23.087336\n",
+      "\n",
+      "Nkzxwtdmfqoeyhsqwasjkjvu\n",
+      "Kneb\n",
+      "Kzxwtdmfqoeyhsqwasjkjvu\n",
+      "Neb\n",
+      "Zxwtdmfqoeyhsqwasjkjvu\n",
+      "Eb\n",
+      "Xwtdmfqoeyhsqwasjkjvu\n",
+      "\n",
+      "\n",
+      "Iteration: 2000, Loss: 27.884160\n",
+      "\n",
+      "Liusskeomnolxeros\n",
+      "Hmdaairus\n",
+      "Hytroligoraurus\n",
+      "Lecalosapaus\n",
+      "Xusicikoraurus\n",
+      "Abalpsamantisaurus\n",
+      "Tpraneronxeros\n",
+      "\n",
+      "\n",
+      "Iteration: 4000, Loss: 25.901815\n",
+      "\n",
+      "Mivrosaurus\n",
+      "Inee\n",
+      "Ivtroplisaurus\n",
+      "Mbaaisaurus\n",
+      "Wusichisaurus\n",
+      "Cabaselachus\n",
+      "Toraperlethosdarenitochusthiamamumamaon\n",
+      "\n",
+      "\n",
+      "Iteration: 6000, Loss: 24.608779\n",
+      "\n",
+      "Onwusceomosaurus\n",
+      "Lieeaerosaurus\n",
+      "Lxussaurus\n",
+      "Oma\n",
+      "Xusteonosaurus\n",
+      "Eeahosaurus\n",
+      "Toreonosaurus\n",
+      "\n",
+      "\n",
+      "Iteration: 8000, Loss: 24.070350\n",
+      "\n",
+      "Onxusichepriuon\n",
+      "Kilabersaurus\n",
+      "Lutrodon\n",
+      "Omaaerosaurus\n",
+      "Xutrcheps\n",
+      "Edaksoje\n",
+      "Trodiktonus\n",
+      "\n",
+      "\n",
+      "Iteration: 10000, Loss: 23.844446\n",
+      "\n",
+      "Onyusaurus\n",
+      "Klecalosaurus\n",
+      "Lustodon\n",
+      "Ola\n",
+      "Xusodonia\n",
+      "Eeaeosaurus\n",
+      "Troceosaurus\n",
+      "\n",
+      "\n",
+      "Iteration: 12000, Loss: 23.291971\n",
+      "\n",
+      "Onyxosaurus\n",
+      "Kica\n",
+      "Lustrepiosaurus\n",
+      "Olaagrraiansaurus\n",
+      "Yuspangosaurus\n",
+      "Eealosaurus\n",
+      "Trognesaurus\n",
+      "\n",
+      "\n",
+      "Iteration: 14000, Loss: 23.382338\n",
+      "\n",
+      "Meutromodromurus\n",
+      "Inda\n",
+      "Iutroinatorsaurus\n",
+      "Maca\n",
+      "Yusteratoptititan\n",
+      "Ca\n",
+      "Troclosaurus\n",
+      "\n",
+      "\n",
+      "Iteration: 16000, Loss: 23.265759\n",
+      "\n",
+      "Meustoloplohus\n",
+      "Imeda\n",
+      "Iutosaurus\n",
+      "Maca\n",
+      "Yuspanenphurus\n",
+      "Daaisicachtitan\n",
+      "Trodon\n",
+      "\n",
+      "\n",
+      "Iteration: 18000, Loss: 22.901372\n",
+      "\n",
+      "Phytrohaesaurus\n",
+      "Melaaisaurus\n",
+      "Mystoosaurus\n",
+      "Peeamosaurus\n",
+      "Ytronosaurus\n",
+      "Eiakosaurus\n",
+      "Trogonosaurus\n",
+      "\n",
+      "\n",
+      "Iteration: 20000, Loss: 22.924847\n",
+      "\n",
+      "Nixusaurus\n",
+      "Llecalosaurus\n",
+      "Lxusodon\n",
+      "Necalosaurus\n",
+      "Ystrengosaurus\n",
+      "Eg\n",
+      "Trochkosaurus\n",
+      "\n",
+      "\n",
+      "Iteration: 22000, Loss: 22.759659\n",
+      "\n",
+      "Piustolonosaurus\n",
+      "Migbaeron\n",
+      "Myrrocepholus\n",
+      "Peeadosaurus\n",
+      "Yusodomincteros\n",
+      "Eiadosaurus\n",
+      "Trocephods\n",
+      "\n",
+      "\n",
+      "Iteration: 24000, Loss: 22.695558\n",
+      "\n",
+      "Meutosaurus\n",
+      "Incacasaurosbluchesaurus\n",
+      "Jwrosaurus\n",
+      "Mecalosaurus\n",
+      "Yusmanasaurus\n",
+      "Ekagosaurus\n",
+      "Usicheronychus\n",
+      "\n",
+      "\n",
+      "Iteration: 26000, Loss: 22.697213\n",
+      "\n",
+      "Meutrodon\n",
+      "Ingaahus\n",
+      "Itrosaurus\n",
+      "Meeadromaastrumalus\n",
+      "Ytrocenithyptor\n",
+      "Eeberteia\n",
+      "Trochinnhyinntarkicus\n",
+      "\n",
+      "\n",
+      "Iteration: 28000, Loss: 22.518451\n",
+      "\n",
+      "Mevusceratops\n",
+      "Kracaerosaurus\n",
+      "Lwstodoniomunisanosaurus\n",
+      "Ndabasceia\n",
+      "Ystodonosaurus\n",
+      "Eiacosaurus\n",
+      "Trsarisaurus\n",
+      "\n",
+      "\n",
+      "Iteration: 30000, Loss: 22.503530\n",
+      "\n",
+      "Nivusaurus\n",
+      "Jicaaesthaaosaurus\n",
+      "Lustrephus\n",
+      "Ndaadosaurus\n",
+      "Yusmandosaurus\n",
+      "Efagosaurus\n",
+      "Trochisaurus\n",
+      "\n",
+      "\n",
+      "Iteration: 32000, Loss: 22.237665\n",
+      "\n",
+      "Maxusaurus\n",
+      "Jkacalosaurus\n",
+      "Justodon\n",
+      "Macaishalanthuchithedun\n",
+      "Yusianasaurus\n",
+      "Egakosaurus\n",
+      "Trodonathyluskarchasafrushamahaltallang\n",
+      "\n",
+      "\n",
+      "Iteration: 34000, Loss: 22.426674\n",
+      "\n",
+      "Mayusaurus\n",
+      "Ingaagosaurus\n",
+      "Iussqceniravenosaurus\n",
+      "Macaistag\n",
+      "Yrosaurus\n",
+      "Elafosaurus\n",
+      "Trodon\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "parameters = model(data, ix_to_char, char_to_ix)"
    ]
@@ -824,7 +1030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
