--- a/Assignment 3/HA-3. Transformers, positional encoding, attention.ipynb
+++ b/Assignment 3/HA-3. Transformers, positional encoding, attention.ipynb
@@ -66,11 +66,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "_OpwqWL2QH5G"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy._utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\numpy\\__init__.py:119\u001b[0m\n\u001b[0;32m    116\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[0;32m    117\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m--> 119\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_globals\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _NoValue, _CopyMode\n\u001b[0;32m    120\u001b[0m \u001b[38;5;66;03m# These exceptions were moved in 1.25 and are hidden from __dir__()\u001b[39;00m\n\u001b[0;32m    121\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexceptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m    122\u001b[0m     ComplexWarning, ModuleDeprecationWarning, VisibleDeprecationWarning,\n\u001b[0;32m    123\u001b[0m     TooHardError, AxisError)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\numpy\\_globals.py:20\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124;03mModule defining global singleton classes.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     16\u001b[0m \n\u001b[0;32m     17\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01menum\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m set_module \u001b[38;5;28;01mas\u001b[39;00m _set_module\n\u001b[0;32m     22\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_NoValue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_CopyMode\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# Disallow reloading this module so as to preserve the identities of the\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# classes defined here.\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy._utils'"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import time\n",
@@ -163,7 +177,7 @@
     "    # Get i from dimension span k\n",
     "\n",
     "    # Calculate the angles using pos, i and d\n",
-    "\n",
+    "    angles = pos/np.power(10000,2*(i//2)/d)\n",
     "    # END CODE HERE\n",
     "    \n",
     "    return angles"
@@ -234,13 +248,16 @@
     "    \"\"\"\n",
     "    # START CODE HERE\n",
     "    # initialize a matrix angle_rads of all the angles \n",
-    "\n",
+    "    angle_rads = get_angles(np.arange(positions)[:, np.newaxis],\n",
+    "                          np.arange(d)[np.newaxis, :],\n",
+    "                          d)\n",
     "  \n",
     "    # apply sin to even indices in the array; 2i\n",
-    "\n",
+    "    angle_rads[:, 0::2] = np.sin(angle_rads[:, 0::2])\n",
     "  \n",
     "    # apply cos to odd indices in the array; 2i+1\n",
-    "\n",
+    "    angle_rads[:, 1::2] = np.cos(angle_rads[:, 1::2])\n",
+    "    \n",
     "    # END CODE HERE\n",
     "    \n",
     "    pos_encoding = angle_rads[np.newaxis, ...]\n",
@@ -499,20 +516,25 @@
     "    \"\"\"\n",
     "    # START CODE HERE\n",
     "\n",
-    "    \n",
+    "    # Q*K'\n",
+    "    matmul_qk = tf.matmul(q, k, transpose_b=True)  # (..., seq_len_q, seq_len_k)  \n",
+    "\n",
     "\n",
     "    # scale matmul_qk\n",
-    "\n",
+    "    dk = tf.cast(tf.shape(k)[-1], tf.float32)\n",
+    "    scaled_attention_logits = matmul_qk / tf.math.sqrt(dk)\n",
+    "    \n",
     "\n",
     "    # add the mask to the scaled tensor.\n",
-    "#     if mask is not None: # Don't replace this None\n",
-    "\n",
+    "    if mask is not None:\n",
+    "        scaled_attention_logits += (1-mask) * (-1e9)\n",
     "\n",
     "    # softmax is normalized on the last axis (seq_len_k) so that the scores\n",
     "    # add up to 1.\n",
-    "\n",
-    "\n",
-    "\n",
+    "    attention_weights =  tf.keras.activations.softmax(scaled_attention_logits, axis=-1)  # (..., seq_len_q, seq_len_k)\n",
+    "    # attention_weights * V\n",
+    "    output = tf.matmul(attention_weights, v)  # (..., seq_len_q, depth_v)\n",
+    "    \n",
     "    # END CODE HERE\n",
     "\n",
     "    return output, attention_weights"
@@ -637,25 +659,25 @@
     "            encoder_layer_out -- Tensor of shape (batch_size, input_seq_len, embedding_dim)\n",
     "        \"\"\"\n",
     "        # START CODE HERE\n",
-    "        # calculate self-attention using mha(~1 line).\n",
-    "        # Dropout is added by Keras automatically if the dropout parameter is non-zero during training\n",
+    "        # calculate self-attention using mha(~1 line)\n",
+    "        self_attn_output = self.mha(x,x,x,mask)  # Self attention (batch_size, input_seq_len, embedding_dim)\n",
     "        \n",
+    "        # apply dropout layer to the self-attention output (~1 line)\n",
+    "        self_attn_output = self.dropout1(self_attn_output,training=training)\n",
     "        \n",
-    "        # skip connection\n",
     "        # apply layer normalization on sum of the input and the attention output to get the  \n",
     "        # output of the multi-head attention layer (~1 line)\n",
-    "        \n",
-    "        # (batch_size, input_seq_len, fully_connected_dim ??? should be embedding_dim)\n",
+    "        mult_attn_out = self.layernorm1(x + self_attn_output)  # (batch_size, input_seq_len, embedding_dim)\n",
     "\n",
     "        # pass the output of the multi-head attention layer through a ffn (~1 line)\n",
-    "        # (batch_size, input_seq_len, fully_connected_dim ??? should be embedding_dim)\n",
+    "        ffn_output = self.ffn(mult_attn_out)  # (batch_size, input_seq_len, embedding_dim)\n",
     "        \n",
-    "        # apply dropout layer to ffn output during training (~1 line)\n",
-    "        # use `training=training` \n",
+    "        # apply dropout layer to ffn output (~1 line)\n",
+    "        ffn_output = self.dropout2(ffn_output)\n",
     "        \n",
-    "        # apply layer normalization on sum of the output from multi-head attention (skip connection) and ffn output to get the\n",
+    "        # apply layer normalization on sum of the output from multi-head attention and ffn output to get the\n",
     "        # output of the encoder layer (~1 line)\n",
-    "        encoder_layer_out = ...  # (batch_size, input_seq_len, embedding_dim)\n",
+    "        encoder_layer_out = self.layernorm2(mult_attn_out + ffn_output)  # (batch_size, input_seq_len, embedding_dim)\n",
     "        # END CODE HERE\n",
     "        \n",
     "        return encoder_layer_out\n",
@@ -743,15 +765,16 @@
     "        \n",
     "        # START CODE HERE\n",
     "        # Pass input through the Embedding layer\n",
-    "        # (batch_size, input_seq_len, embedding_dim)\n",
+    "        x = self.embedding(x) # (batch_size, input_seq_len, embedding_dim)\n",
     "        # Scale embedding by multiplying it by the square root of the embedding dimension\n",
-    "\n",
+    "        x *= tf.math.sqrt(tf.cast(self.embedding_dim,tf.float32))\n",
     "        # Add the position encoding to embedding\n",
-    "\n",
+    "        x += self.pos_encoding[:, :seq_len, :]\n",
     "        # Pass the encoded embedding through a dropout layer\n",
-    "        # use `training=training`\n",
-    "\n",
+    "        x = self.dropout(x,training=training)\n",
     "        # Pass the output through the stack of encoding layers \n",
+    "        for i in range(self.num_layers):\n",
+    "            x =self.enc_layers[i](x, training, mask)\n",
     "        # END CODE HERE\n",
     "\n",
     "        return x  # (batch_size, input_seq_len, embedding_dim)"
@@ -840,33 +863,38 @@
     "        \"\"\"\n",
     "        \n",
     "        # START CODE HERE\n",
-    "        # enc_output.shape == (batch_size, input_seq_len, fully_connected_dim ??? should be embedding_dim)\n",
+    "        # enc_output.shape == (batch_size, input_seq_len, embedding_dim)\n",
     "        \n",
     "        # BLOCK 1\n",
-    "        # calculate self-attention and return attention scores as attn_weights_block1.\n",
-    "        # Dropout will be applied during training (~1 line).\n",
+    "        # calculate self-attention and return attention scores as attn_weights_block1 (~1 line)\n",
+    "        attn1, attn_weights_block1 = self.mha1(x, x, x, look_ahead_mask, return_attention_scores=True)  # (batch_size, target_seq_len, d_model)\n",
     "        \n",
+    "        # apply dropout layer on the attention output (~1 line)\n",
+    "        attn1 = self.dropout1(attn1,training=training)\n",
     "        \n",
-    "        # apply layer normalization (layernorm1) to the sum of the attention output and the input (~1 line)\n",
-    "\n",
+    "        # apply layer normalization to the sum of the attention output and the input (~1 line)\n",
+    "        out1 = self.layernorm1(attn1 + x)\n",
     "\n",
     "        # BLOCK 2\n",
-    "        # calculate self-attention using the Q from the first block and K and V from the encoder output. \n",
-    "        # Dropout will be applied during training\n",
-    "        # Return attention scores as attn_weights_block2 (~1 line) \n",
+    "        # calculate self-attention using the Q from the first block and K and V from the encoder output.\n",
+    "        # Return attention scores as attn_weights_block2 (~1 line)\n",
+    "        attn2, attn_weights_block2 = self.mha2(out1, enc_output, enc_output, padding_mask, return_attention_scores=True)  # (batch_size, target_seq_len, d_model)\n",
     "        \n",
-    "        # apply layer normalization (layernorm2) to the sum of the attention output and the output of the first block (~1 line)\n",
+    "        # apply dropout layer on the attention output (~1 line)\n",
+    "        attn2 = self.dropout2(attn2,training=training)\n",
     "        \n",
-    "                \n",
+    "        # apply layer normalization to the sum of the attention output and the output of the first block (~1 line)\n",
+    "        out2 = self.layernorm2(attn2+out1)  # (batch_size, target_seq_len, embedding_dim)\n",
+    "        \n",
     "        #BLOCK 3\n",
     "        # pass the output of the second block through a ffn\n",
-    "        \n",
+    "        ffn_output = self.ffn(out2) # (batch_size, target_seq_len, embedding_dim)\n",
     "        \n",
     "        # apply a dropout layer to the ffn output\n",
-    "        # use `training=training`\n",
+    "        ffn_output = self.dropout3(ffn_output)\n",
     "        \n",
-    "        # apply layer normalization (layernorm3) to the sum of the ffn output and the output of the second block\n",
-    "       \n",
+    "        # apply layer normalization to the sum of the ffn output and the output of the second block\n",
+    "        out3 = self.layernorm3(ffn_output+out2) # (batch_size, target_seq_len, embedding_dim)\n",
     "        # END CODE HERE\n",
     "\n",
     "        return out3, attn_weights_block1, attn_weights_block2"
@@ -954,26 +982,28 @@
     "        \n",
     "        # START CODE HERE\n",
     "        # create word embeddings \n",
-    "        \n",
+    "        x = self.embedding(x)  # (batch_size, target_seq_len, embedding_dim)\n",
     "        \n",
     "        # scale embeddings by multiplying by the square root of their dimension\n",
+    "        x *=  tf.math.sqrt(tf.cast(self.embedding_dim, tf.float32))\n",
     "\n",
     "        \n",
     "        # calculate positional encodings and add to word embedding\n",
-    "\n",
-    "\n",
+    "        x += self.pos_encoding[:, :seq_len, :]\n",
+    "        \n",
     "        # apply a dropout layer to x\n",
-    "        # use `training=training`\n",
-    "\n",
+    "        x = self.dropout(x,training=training)\n",
     "\n",
     "        # use a for loop to pass x through a stack of decoder layers and update attention_weights (~4 lines total)\n",
-    "\n",
+    "        for i in range(self.num_layers):\n",
     "            # pass x and the encoder output through a stack of decoder layers and save the attention weights\n",
     "            # of block 1 and 2 (~1 line)\n",
-    "\n",
+    "            x, block1, block2 = self.dec_layers[i](x, enc_output, training,\n",
+    "                                                 look_ahead_mask, padding_mask)\n",
     "\n",
     "            #update attention_weights dictionary with the attention weights of block 1 and block 2\n",
-    "\n",
+    "            attention_weights['decoder_layer{}_block1_self_att'.format(i+1)] = block1\n",
+    "            attention_weights['decoder_layer{}_block2_decenc_att'.format(i+1)] = block2\n",
     "        # END CODE HERE\n",
     "        \n",
     "        # x.shape == (batch_size, target_seq_len, fully_connected_dim)\n",
@@ -1071,14 +1101,15 @@
     "        \"\"\"\n",
     "        # START CODE HERE\n",
     "        # call self.encoder with the appropriate arguments to get the encoder output\n",
-    "        \n",
+    "        enc_output = self.encoder(input_sentence, training, enc_padding_mask) # (batch_size, inp_seq_len, fully_connected_dim)\n",
     "        \n",
     "        # call self.decoder with the appropriate arguments to get the decoder output\n",
-    "        # dec_output.shape == (batch_size, tar_seq_len, fully_connected_dim ??? should be embedding_dim)\n",
-    "\n",
+    "        # dec_output.shape == (batch_size, tar_seq_len, fully_connected_dim)\n",
+    "        dec_output, attention_weights = self.decoder(output_sentence, enc_output, training, look_ahead_mask, dec_padding_mask)\n",
     "        \n",
     "        # pass decoder output through a linear layer and softmax (~2 lines)\n",
-    "        # END CODE HERE\n",
+    "        final_output = self.final_layer(dec_output)  # (batch_size, tar_seq_len, target_vocab_size)\n",
+    "        # START CODE HERE\n",
     "\n",
     "        return final_output, attention_weights"
    ]
@@ -1133,7 +1164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
